# worldfork-cli

./: .dockerignore  .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  docker-compose.yml  prd.md  pyproject.toml  skill.md
backend/: .env.example  README.md  alembic.ini  cli.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: actors.py  artifacts.py  big_bangs.py  case_studies.py  emotion_observability.py  frontend.py  god_agent.py  graphs.py  initialization.py  jobs.py  multiverses.py  sample.py  scenario_bank.py  schemas.py  settings.py  sociology.py  ticks.py  universes.py  utils.py  workspace.py
backend/app/core/: clock.py  config.py  errors.py  labels.py  security.py
backend/app/db/: models.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_initial.py
backend/app/jobs/: queues.py  tasks.py  workers.py
backend/app/llm/: audit.py  openrouter_provider.py  prompt_builder.py  prompt_templates.py  provider.py  redaction.py  schemas.py
backend/app/providers/: ollama.py  openai.py  openrouter.py
backend/app/simulation/: agent_engine.py  branch_engine.py  case_studies.py  cohort_engine.py  emotion_observability_engine.py  event_engine.py  god_agent.py  god_tools.py  graph_engine.py  initialization_corpus.py  initializer.py  initializer_agent.py  report_engine.py  run_orchestrator.py  scenario_bank.py  sociology_engine.py  source_truth_validation.py  tick_runner.py
backend/app/source_of_truth/: loader.py  snapshotter.py  validator.py
backend/app/storage/: artifact_store.py  pdf_store.py
backend/tests/: test_api_contracts.py  test_db_integrity.py  test_frontend_api.py  test_jobs.py  test_labels.py  test_llm_security.py  test_report_artifact_consistency.py  test_simulation_resilience.py  test_storage_config.py  test_timeline_safety.py
frontend/: app.js  bigbangs.css  bigbangs.js  index.html  landing.css  landing.js  package-lock.json  package.json  setup.css  setup.js  styles.css  vite.config.ts  workspace.css  workspace.js
source_of_truth/: actor_schema.json  behavior_axes.json  cohort_state_schema.json  emotions.json  event_types.json  expression_scale.json  god_agent_policy.json  graph_edge_types.json  (+6 more)
(+16 files in other folders)
