[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "worldfork-cli"
version = "0.2.0"
description = "Text-first CLI for the WorldFork backend (recursively branching social simulations)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Hilo-Hilo" }]
keywords = ["worldfork", "cli", "simulation", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
]

[project.scripts]
worldfork = "worldfork.cli:main"

[project.urls]
Homepage = "https://github.com/Hilo-Hilo/worldfork-cli"
Source = "https://github.com/Hilo-Hilo/worldfork-cli"
Issues = "https://github.com/Hilo-Hilo/worldfork-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/worldfork"]

[tool.hatch.build.targets.sdist]
include = ["src/worldfork", "README.md", "LICENSE", "pyproject.toml", "tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
